Sat Apr 19 10:07:24 2014  Tanaka Akira  <akr@fsij.org>

	* internal.h (struct RBignum): Use size_t for len.

	* include/ruby/intern.h (rb_big_new): Use size_t instead of long to
	  specify the size of bignum.
	  (rb_big_resize): Ditto.

	* bignum.c: Follow above changes.

	* rational.c: Follow above changes.

	* marshal.c: Follow above changes.

Sat Apr 19 00:32:07 2014  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_num2long): Returns a long.
	  (rb_num2ulong): Returns a unsigned long.

	* bignum.c (rb_big2long): Returns a long.
	  (rb_big2ulong): Returns a unsigned long.

	* include/ruby/intern.h: Follow above changes.

	* include/ruby/ruby.h: Follow above changes.
	  (rb_num2long_inline): No need to cast.
	  (rb_num2ulong_inline): Ditto.

Sat Apr 19 00:17:20 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (SHARABLE_SUBSTRING_P): predicate if substring can be
	  shared with the original string.  true if just at the end of the
	  original string, for the time being.  all substring will be able to
	  be shared in the future.

Fri Apr 18 21:48:24 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_new_frozen): consider the shared string at
	  middle.

	* string.c (rb_str_subseq, rb_str_substr, str_byte_substr): share
	  middle of a string.

Fri Apr 18 15:40:05 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c: use uintptr_t instead of VALUE because they are not ruby
	  object.

Fri Apr 18 14:51:42 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c: check str_strlen's argument, and add comment or
	  use NULL if simply it uses str's enc.

Fri Apr 18 14:32:40 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (str_strlen): use enc_strlen if the coderange is known.

Fri Apr 18 14:21:21 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (enc_strlen): move UTF-8 optimization from str_strlen to
	  enc_strlen.

Fri Apr 18 08:50:18 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
